--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: system-ui, -apple-system, sans-serif;
-  max-width: 720px;
-  margin: 3rem auto;
+  max-width: 680px;
+  margin: 4rem auto;
+  padding: 0 1rem;
   line-height: 1.6;
 }
