--- a/style.css
+++ b/style.css
@@ -4,4 +4,12 @@ body {
   margin: 4rem auto;
   padding: 0 1rem;
   line-height: 1.6;
+  
+h1 {
+  font-size: 2.2rem;
+  margin-bottom: 0.25rem;
+}
+
+p {
+  color: #555;
 }
